<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context=".SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="TODO" />

        <!--CREATE NEW ACCOUNT:-->

        <TextView
            android:id="@+id/sign_up_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yeni_hesap_olustur" />


        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/signup_field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/signup_field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">


            <EditText
            android:id="@+id/name_sign_up_from_editview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/isim"
                android:inputType="" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/gender_sign_up_from_editview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cinsiyet"
            android:inputType="" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/photo_sign_up_from_editview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/photo_url"
                android:inputType="" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/yasgrubunu_sign_in" />

        <Spinner
            android:id="@+id/age_sign_up_form_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/select_date_time"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/kayit" />
 </LinearLayout>
</ScrollView>